--- a/index.html
+++ b/index.html
@@ -419,8 +419,7 @@
           </span>
         </label>
         <label for="person-coment" class="form__textarea">Коментар
-          <textarea class="form__coment" name="person-coment" id="person-coment" cols="30" rows="10"
-            placeholder="Введіть текст"></textarea>
+          <textarea class="form__coment" name="person-coment" id="person-coment" placeholder="Введіть текст"></textarea>
         </label>
         <div class="checkbox">
           <label for="policy" class="checkbox__label">
